tests/fail/02_undeclared.lang
целое а = 10;
целое б = а + х;
